v3.56.22 Fixed bugs in the function for calculating gaps in the protocol.

--- a/src/components/Table/TableCommon.module.css
+++ b/src/components/Table/TableCommon.module.css
@@ -105,7 +105,7 @@
   text-align: center;
 }
 .profile {
-  width: 50%;
+  width: 30%;
 }
 .box__value {
   display: flex;
